--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGODB_URI = ""
-RESEND_API_KEY="re_PJxqtJCB_9YmpAEeGwn53tBJMqFWE5ZPZ"
-NEXTAUTH_SECRET="abhishekpatel"
+RESEND_API_KEY=""
+NEXTAUTH_SECRET=""
